# floaty

./: .env.example  .gitignore  README.md  pyproject.toml
src/listing_agent/: cli.py  config.py  graph.py  state.py
src/listing_agent/nodes/: __init__.py  _llm.py  analyzer.py  approval.py  critic.py  generator.py  publisher.py  researcher.py
src/listing_agent/rag/: __init__.py  loader.py  retriever.py
src/listing_agent/rag/knowledge_base/: amazon.md  etsy.md  shopify.md
src/listing_agent/scoring/: llm_judge.py  rubric.py  rules.py
src/listing_agent/tools/: amazon.py  etsy.py  shopify.py
tests/: conftest.py  test_researcher.py
tests/unit/: test_amazon_tool.py  test_analyzer.py  test_approval.py  test_cli.py  test_config.py  test_critic.py  test_etsy_tool.py  test_generator.py  test_graph.py  test_llm_judge.py  test_publisher.py  test_retriever.py  test_rubric.py  test_rules_scorer.py  test_shopify_tool.py  test_state.py
