[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "listing-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.6.0",
    "langgraph-checkpoint-postgres>=0.1.0",
    "langgraph-checkpoint-sqlite>=0.1.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "llama-index-core>=0.12.0",
    "llama-index-vector-stores-chroma>=0.4.0",
    "llama-index-embeddings-huggingface>=0.5.0",
    "chromadb>=1.0.0",
    "httpx>=0.27.0",
    "python-amazon-sp-api>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "vcrpy>=6.0.0",
]

[project.scripts]
listing-agent = "listing_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/listing_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
